<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/password_dialog_label"
        android:id="@+id/header"/>

    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_edit_current_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_below="@id/header"
        android:maxLength="100"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_edit_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_below="@id/current_password"
        android:maxLength="100"/>

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_edit_re_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_below="@id/password"
        android:maxLength="100"/>

    <TextView
        android:id="@id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/app_error"
        android:layout_below="@id/re_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/user_edit_password_save"
        android:textColor="@color/app_font"
        android:layout_below="@id/error"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
