<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_post_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.andreasogeirik.master_frontend.layout.view.CustomButton
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_home_black_24dp" />

        <com.andreasogeirik.master_frontend.layout.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_user"
            android:textColor="@color/app_font"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/attributes_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/default_profile"
            />

        <com.andreasogeirik.master_frontend.layout.view.CustomTextView
            android:id="@+id/image_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:text="@string/user_edit_image_info"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_edit_firstname"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_below="@id/image_info"
            />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstname"
            android:hint="@string/user_edit_lastname"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastname"
            android:hint="@string/user_edit_location"
            android:maxLines="1"
            android:singleLine="true" />

        <com.andreasogeirik.master_frontend.layout.view.CustomTextView
            android:id="@id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_error"
            android:layout_below="@id/location"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error"
            android:text="@string/user_edit_submit"
            android:background="@color/teal"
            android:textStyle="bold"
            android:textColor="@color/app_font"/>


        <RelativeLayout
            android:id="@+id/edit_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/password_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_black_24dp"
                android:layout_marginRight="10dp"
                />

            <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_edit_password_btn"
                android:textColor="@color/app_font"
                android:layout_toRightOf="@id/password_symbol"/>

        </RelativeLayout>



    </RelativeLayout>
</RelativeLayout>