<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.andreasogeirik.master_frontend.layout.view.CustomButton
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_home_black_24dp" />

        <com.andreasogeirik.master_frontend.layout.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_event"
            android:textColor="@color/app_font"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <com.gc.materialdesign.views.ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_create_name"
                    android:maxLines="1"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_create_location"
                    android:maxLines="1"
                    android:singleLine="true" />


                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_create_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp">

                <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                    android:id="@+id/difficulty_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/event_create_difficulty"
                    android:layout_weight=".4"/>

                <com.andreasogeirik.master_frontend.layout.view.CustomSlider
                    android:id="@+id/slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#42A5F5"
                    materialdesign:max="2"
                    materialdesign:min="0"
                    materialdesign:showNumberIndicator="true"
                    android:layout_weight=".6"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="10dp">

                <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                    android:id="@+id/difficulty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="ENKEL"
                    android:textColor="@color/app_blue"
                    android:layout_weight=".4"
                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"/>

            </LinearLayout>





            <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                android:id="@+id/start_date_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@color/app_error"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.andreasogeirik.master_frontend.layout.view.CustomButton
                    android:id="@+id/start_date_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal"
                    android:text="@string/event_create_start_date_label"
                    android:textColor="@color/app_font"
                    android:textStyle="bold" />

                <com.andreasogeirik.master_frontend.layout.view.CustomButton
                    android:id="@+id/start_time_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal"
                    android:text="@string/event_create_start_time_label"
                    android:textColor="@color/app_font"
                    android:textStyle="bold" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_create_checkbox"
                android:textColor="@color/app_font" />

            <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                android:id="@+id/end_date_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@color/app_error"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.andreasogeirik.master_frontend.layout.view.CustomButton
                    android:id="@+id/end_date_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:text="@string/event_create_end_date_label"
                    android:textColor="@color/app_font"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <com.andreasogeirik.master_frontend.layout.view.CustomButton
                    android:id="@+id/end_time_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:text="@string/event_create_end_time_label"
                    android:textColor="@color/app_font"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/event_name"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_post_background"
                android:padding="16dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"/>

            </RelativeLayout>

            <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                android:id="@+id/image_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@color/app_error"
                android:visibility="gone" />

            <com.andreasogeirik.master_frontend.layout.view.CustomButton
                android:id="@+id/image_select_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/teal"
                android:text="@string/event_create_select_image"
                android:textColor="@color/app_font"
                android:textStyle="bold" />

            <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:textColor="@color/app_error"
                android:visibility="gone" />

            <com.andreasogeirik.master_frontend.layout.view.CustomButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/grey"
                android:text="@string/event_create_submit"
                android:textColor="@color/app_font"
                android:textStyle="bold" />
        </LinearLayout>
    </com.gc.materialdesign.views.ScrollView>
</RelativeLayout>
