<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    </android.support.v7.widget.Toolbar>

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_font"
            android:textSize="40dp"
            android:text="REGISTRER"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />




    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/register_text"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/image_view"
                android:weightSum="8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/email_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_weight="1.7"/>

                    <Button
                        android:id="@+id/register_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_add_a_photo_black_24dp"
                        android:textColor="@color/app_font"
                        android:layout_weight="0.3"
                        android:layout_marginRight="5dp"/>

                </LinearLayout>




                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>



                <EditText
                    android:id="@+id/re_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:hint="@string/prompt_re_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:hint="@string/prompt_firstname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>


                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:hint="@string/prompt_lastname"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1"/>

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_location"
                    android:maxLines="1"
                    android:singleLine="true" />


                <com.andreasogeirik.master_frontend.layout.view.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/register_error"
                    android:textColor="@color/app_error"
                    android:visibility="gone"
                    android:freezesText="true"
                    android:layout_weight="1"/>

                <com.andreasogeirik.master_frontend.layout.view.CustomButton
                    android:id="@+id/register_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register"
                    android:textStyle="bold"
                    android:background="@color/grey"
                    android:textColor="@color/app_font"
                    android:layout_weight="1"/>

            </LinearLayout>


        </RelativeLayout>




    </ScrollView>
        </RelativeLayout>
</RelativeLayout>
